# red-runner

./: .gitignore  PLAN.md  README.md  config.example.yaml  pyproject.toml
analysis/: l1_content_filter_bypass_research.md
catalogs/: guardrail_evasion_phase2_5_v1.json  guardrail_evasion_phase2_v1.json  guardrail_evasion_phase3_v1.json  guardrail_evasion_phase3_v2.json  guardrail_evasion_phase4_v1.json  guardrail_recon_phase1_v1.json
docs/: findings_report_phases_1_2_5.md
recon/: cli.py  runner.py  scorer.py  target.py
